# tinyml-esp32-s3

./: .gitignore  README.md  pyproject.toml
cifar10/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
cifar10/main/: CMakeLists.txt  cifar.cpp  idf_component.yml
cifar10/models/: cifar10.keras  cifar10_float.tflite  cifar10_int8.tflite
cifar10/scripts/: convert_tflite.py  evaluate.py  export_test_image.py  train.py
hello_world/: .gitignore  README.md
hello_world/main/: hello_world_main.c
mnist/: CMakeLists.txt  README.md  pyproject.toml  sdkconfig
mnist/main/: CMakeLists.txt  mnist.cpp
mnist/models/: mnist.keras  mnist_float.tflite  mnist_int8.tflite
mnist/scripts/: convert_tflite.py  evaluate.py  export_test_image.py  list_model_ops.py  tflite_to_cpp.py  train.py
mobilenet_v1/: CMakeLists.txt  README.md  pyproject.toml  sdkconfig
mobilenet_v1/main/: CMakeLists.txt  mobilenet_v1.cpp
mobilenet_v1/main/models/: mobilenet_v1_025_int8.cc  mobilenet_v1_025_int8.h  mobilenet_v1_050_int8.h  mobilenet_v1_075_int8.h  mobilenet_v1_100_int8.h  mobilenet_v1_sample.h
mobilenet_v1/models/: mobilenet_v1_025.keras  mobilenet_v1_025_float.tflite  mobilenet_v1_025_int8.tflite  mobilenet_v1_050.keras  mobilenet_v1_050_float.tflite  mobilenet_v1_050_int8.tflite  mobilenet_v1_075_int8.tflite  mobilenet_v1_100_int8.tflite
mobilenet_v1/scripts/: convert_tflite.py  (+3 more)
mobilenet_v2/: CMakeLists.txt  README.md  partitions.csv  pyproject.toml  sdkconfig
scripts/: convert_tflite.py  evaluate.py  export_test_image.py  list_model_ops.py  tflite_to_cpp.py  train.py
(+25 files in other folders)
